# fancy-tree

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  default.nix  flake.nix
.devcontainer/: devcontainer.json
.devcontainer/nix/: devcontainer.json
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/PULL_REQUEST_TEMPLATE/: new-release.md
.github/workflows/: build-assets.yml  ci.yml  release.yml
lua/meta/: types.lua
nix/: package.nix
packaging/nix/: package.nix
scripts/: install.ps1  install.sh  setup-git.sh
src/: cli.rs  lib.rs
src/color/: mod.rs
src/colors/: mod.rs
src/config/: mod.rs
src/config/colors/: colors.lua  mod.rs
src/config/icons/: mod.rs
src/config/main/: config.lua  mod.rs
src/ext/: mod.rs  path.rs
src/git/: mod.rs  status.rs  util.rs
src/icons/: mod.rs
src/lua/api/: mod.rs
src/lua/state/: builder.rs  mod.rs
src/sorting/: direction.rs  directories.rs  method.rs  mod.rs
src/tree/: builder.rs  mod.rs
src/tree/entry/attributes/: file.rs  interop.rs  mod.rs
