[package]
name = "fancy-tree"
version = "0.1.1"
description = "A `tree` alternative with git support, code language detection, and nerd fonts."
license = "MIT OR Apache-2.0"
repository = "https://github.com/spenserblack/fancy-tree"
edition = "2024"
exclude = [
    ".devcontainer/",
    ".editorconfig",
    "/.github/",
    ".gitignore",
    ".git-blame-ignore-revs",
    ".luarc.lua",
    ".vscode/",
    "INSTALL.md",
    "/lua/",
    "/scripts/",
]
rust-version = "1.92"
categories = ["command-line-utilities", "filesystem", "visualization"]
keywords = ["cli", "command-line", "git", "tree"]

[features]
default = ["git-vendored", "lua54", "lua-vendored"]
git-vendored = ["git2/vendored-libgit2"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
lua-vendored = ["mlua/vendored"]

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
directories = "6.0.0"
either = "1.15.0"
find-editor = "1.0.0"
gengo-language = "0.14.1-rc.1"
git2 = { version = "0.20.3", default-features = false }
glob = "0.3.3"
mlua = "0.11"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }

[dev-dependencies]
rstest = "0.26"
